# lab7

./: CMakeLists.txt  README.md  common.h  editor.c  load.c  mcb.c  rt.c  save.c  show.c  showrev.c  sonar-project.properties
.github/workflows/: debug.yml  release.yml
tests/: hello_tests.cc
text/: _text.h  move_cursor_left.c  process_backward.c  remove_last_line.c  text.h
